--- a/Xperience/Xperience.Data/Xperience.Data.csproj
+++ b/Xperience/Xperience.Data/Xperience.Data.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
