--- a/Xperience/Xperience/appsettings.json
+++ b/Xperience/Xperience/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=.;Database=Xperience;User Id=sa;Password=P@ssw0rd"
+    "ApplicationDbContext": "Server=.;Database=Xperience;User Id=sa;Password=P@ssw0rd"
   }
 }
