--- a/Xperience/Xperience/appsettings.Development.json
+++ b/Xperience/Xperience/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        },
+    },
+    "ConnectionStrings": {
+        "ApplicationDbContext": "server=DESKTOP-ED8AHR3; database=Xperience; Trusted_Connection=True;"
     }
-  }
 }
