--- a/Xperience/Xperience/appsettings.json
+++ b/Xperience/Xperience/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=.;Database=XperienceDB;User Id=sa;Password=sql123"
+    "ApplicationDbContext": "Server=.;Database=Xperience;User Id=sa;Password=sql123"
   }
 }
