1 change in appdbcontext and creation of api controllers

--- a/Xperience/Xperience/appsettings.json
+++ b/Xperience/Xperience/appsettings.json
@@ -6,6 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  //darure tgahyer lconnection string lal server te3ak 
+  //
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ApplicationDbContext": "Server=.;Database=Xperience;User Id=sa;Password=sql123"
