fix swagger + applicationuser table warning

--- a/Xperience/Xperience/appsettings.json
+++ b/Xperience/Xperience/appsettings.json
@@ -10,6 +10,6 @@
   //
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ApplicationDbContext": "Server=.;Database=Xperience;User Id=sa;Password=sql123"
+    "ApplicationDbContext": "Server=DESKTOP-7CMCOUF\\SQLEXPRESS;Database=Xperience;User Id=sa;Password=sql123"
   }
 }
