--- a/Xperience/Xperience.Data/Xperience.Data.csproj
+++ b/Xperience/Xperience.Data/Xperience.Data.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.0.1" />
+    <PackageReference Include="React.AspNet" Version="5.1.2" />
   </ItemGroup>
 
 </Project>
