--- a/Xperience/Xperience/client_app/package.json
+++ b/Xperience/Xperience/client_app/package.json
@@ -8,17 +8,21 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
+    "multiselect-react-dropdown": "^1.4.0",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-multiselect": "^2.4.1",
     "react-bootstrap-sidebar": "0.0.1",
     "react-cursor-position": "^3.0.3",
     "react-dom": "^16.12.0",
+    "react-multi-select-component": "^1.3.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
     "router": "^1.3.4",
-    "semantic-ui-css": "^2.2.14"
+    "semantic-ui-css": "^2.2.14",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
