--- a/Xperience/Xperience/Xperience.csproj
+++ b/Xperience/Xperience/Xperience.csproj
@@ -1,7 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,6 +32,7 @@
    </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AWSSDK" Version="2.3.55.2" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore" Version="3.3.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.ChakraCore.Native.win-x64" Version="3.3.0" />
     <PackageReference Include="JavaScriptEngineSwitcher.Extensions.MsDependencyInjection" Version="3.3.0" />
@@ -56,6 +58,7 @@
   <ItemGroup>
     <Folder Include="Pages\Users\" />
     <Folder Include="Pages\User_Reviews\" />
+    <Folder Include="pics\" />
     <Folder Include="wwwroot\Images\PostPictures\" />
     <Folder Include="wwwroot\Images\ProfilePictures\" />
   </ItemGroup>
@@ -177,5 +180,20 @@
     <None Include="wwwroot\lib\chosen.js\docsupport\prototype-1.7.0.0.js" />
     <None Include="wwwroot\lib\chosen.js\LICENSE.md" />
   </ItemGroup>
+<ItemGroup>
+  <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.0.0" Alias="LegacyAspNetCoreJsonFormatter" />
+</ItemGroup>
+<Target Name="AddPackageAliases" BeforeTargets="ResolveReferences" Outputs="%(PackageReference.Identity)">
+  <PropertyGroup>
+    <AliasPackageReference>@(PackageReference->'%(Identity)')</AliasPackageReference>
+    <AliasName>@(PackageReference->'%(Alias)')</AliasName>
+  </PropertyGroup>
+  <ItemGroup>
+    <ReferencePath Condition="'%(FileName)'=='$(AliasPackageReference)' and '$(AliasName)' != ''">
+      <Aliases>$(AliasName)</Aliases>
+    </ReferencePath>
+  </ItemGroup>
+</Target>
+
 
 </Project>
